commentrequest 파일 삭제